--- a/front_end/package.json
+++ b/front_end/package.json
@@ -12,16 +12,19 @@
     "@hookform/resolvers": "^5.2.2",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-slot": "^1.2.4",
+    "@reduxjs/toolkit": "^2.11.1",
     "axios": "^1.13.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lightweight-charts": "^5.0.9",
     "lucide-react": "^0.555.0",
+    "motion": "^12.23.25",
     "next": "16.0.5",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.68.0",
     "react-hot-toast": "^2.6.0",
+    "react-redux": "^9.2.0",
     "tailwind-merge": "^3.4.0",
     "zod": "^4.1.13"
   },
