--- a/price_poller/package.json
+++ b/price_poller/package.json
@@ -2,9 +2,9 @@
   "name": "price_poller",
   "version": "1.0.0",
   "main": "index.js",
-  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "npx tsc -b && node ./dist/index.js"
   },
   "keywords": [],
   "author": "",
